<resources>
    <string name="app_name">CleanBlog</string>

    <!-- Menu Strings-->
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_post">Post</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_favorites">Favorites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_account">Create new account</string>
    <string name="log_in">Log in</string>
    <string name="choose_an_unique_username">Choose an unique username</string>
    <string name="enter_your_username">Username</string>
    <string name="enter_password">Enter password</string>
    <string name="n_likes">11 likes</string>
    <string name="add_comment">Add comment</string>
    <string name="view_all_comments">View all comments</string>
    <string name="username">Username</string>
    <string name="three_dots">&#x205D;</string>
    <string name="tag_people">Tag People</string>
    <string name="add_location">Add Location</string>
    <string name="also_post">Also post to</string>
    <string name="share">Share</string>
    <string name="select_image_from">Select image from</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete Account</string>
    <string name="follow">follow</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
</resources>
