<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navHome"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/navSearch"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/navPost"
        android:icon="@drawable/ic_add_box_black_24dp"
        android:title="@string/nav_post" />
    <item
        android:id="@+id/navFavorite"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/nav_favorites" />
    <item
        android:id="@+id/navProfile"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/nav_profile" />
</menu>