<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/river" />

    <ImageView
        android:id="@+id/ivComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:tint="@color/colorPrimaryDark"
        app:layout_constraintStart_toEndOf="@+id/ivLike"
        app:layout_constraintTop_toTopOf="@+id/ivLike"
        app:srcCompat="@drawable/ic_comment_black_24dp" />

    <ImageView
        android:id="@+id/ivLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:tint="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPostImage"
        app:srcCompat="@drawable/ic_favorite_border_black_24dp" />

    <TextView
        android:id="@+id/tvNumOfLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/n_likes"
        android:textColor="@android:color/black"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLike" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="USERNAME Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis magni animi eum tempore labore, facere quae eligendi sequi unde voluptatibus nobis similique perferendis autem repudiandae quidem dolorem! Vitae, quam voluptates."
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNumOfLikes" />
    <TextView
        android:id="@+id/tvTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="#new #green #apple"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="@+id/tvDescription"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    <ImageView
        android:id="@+id/ivUserComment"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/circle_border"
        android:tint="@color/colorPrimaryDark"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/tvTags"
        app:layout_constraintTop_toBottomOf="@+id/tvTags"
        app:srcCompat="@drawable/ic_account_box_black_24dp" />

    <EditText
        android:id="@+id/etAddComment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/add_comment"
        android:inputType="textLongMessage|textWebEditText|textMultiLine|textAutoComplete"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/ivUserComment"
        app:layout_constraintEnd_toStartOf="@+id/ibAddComment"
        app:layout_constraintStart_toEndOf="@+id/ivUserComment"
        app:layout_constraintTop_toTopOf="@+id/ivUserComment" />

    <ImageButton
        android:id="@+id/ibAddComment"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/circle_border"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/etAddComment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etAddComment"
        app:srcCompat="@drawable/ic_send_black_24dp" />

    <TextView
        android:id="@+id/tvViewAllComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/view_all_comments"
        android:textColor="@android:color/black"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/ivUserComment"
        app:layout_constraintTop_toBottomOf="@+id/etAddComment" />

    <Space
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvViewAllComments" />

    <TextView
        android:id="@+id/tvCreatedOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        app:layout_constraintBottom_toTopOf="@+id/tvDescription"
        app:layout_constraintEnd_toEndOf="@+id/tvDescription"
        app:layout_constraintTop_toTopOf="@+id/ivComment" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/ivPostImage"
        app:layout_constraintEnd_toEndOf="@+id/ivPostImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivPostImage" />

</androidx.constraintlayout.widget.ConstraintLayout>